kubernetes/prod/tools/oauthmail/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauthmail
  namespace: tools
  labels:
    app: oauthmail
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: oauthmail
  template:
    metadata:
      labels:
        app: oauthmail
    spec:
      containers:
        - env:
            - name: LOGFILE
              value: "true"
            - name: DEBUG 
              value: "true"
            - name: CACHE_STORE
              value: /config/credstore.config
            - name: LOCAL_SERVER_AUTH
              value: "true"
          image: blacktirion/email-oauth2-proxy-docker
          name: oauthmail
          ports:
            - containerPort: 1994
              protocol: TCP
            - containerPort: 2465
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: oauthmail-config
      restartPolicy: Always
      volumes:
        - name: oauthmail-config
          persistentVolumeClaim:
            claimName: oauthmail-config
