kubernetes/prod/tools/oauthmail/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oauthmail-80
  namespace: tools
spec:
  type: ClusterIP
  externalIPs:
    - 192.168.202.154
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: oauthmail
---
apiVersion: v1
kind: Service
metadata:
  name: oauthmail-2465
  namespace: tools
spec:
  type: ClusterIP
  externalIPs:
    - 192.168.202.155
  ports:
    - port: 2465
      targetPort: 2465
      protocol: TCP
  selector:
    app: oauthmail
