kubernetes/prod/tools/oauthmail/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: oauthmail
    app.kubernetes.io/name: oauthmail
  name: oauthmail-80
  namespace: tools
spec:
  ingressClassName: traefik
  rules:
  - host: relay.nmoura.pt
    http:
      paths:
      - backend:
          service:
            name: oauthmail-80
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
